@@ -28,3 +28,24 @@ GATEWAY=$GATEWAY
 EOF
 ifconfig $IFACE $IP/16
 echo 'set network successfully'
+
+#route
+gateway=`echo $IP | cut -d. -f1,2`.0.1
+route add default gw $gateway
+route del -net 0.0.0.0 netmask 0.0.0.0 dev eth0
+
+#hosts
+umount /etc/hosts
+cat > /etc/hosts <<EOF
+127.0.0.1 localhost
+$IP     `hostname`
+EOF
+echo 'set host successfully'
+
+#set logstash
+cat > /etc/sysconfig/logstash << EOF
+LS_HEAP_SIZE="1500m"
+LS_JAVA_OPTS="\$JAVA_OPTS -XX:+UseCondCardMark -XX:CMSWaitDuration=250 -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly"
+LS_WORKER_THREADS=20
+EOF
+echo 'set logstash'
